Attempted to fix a bug on mobile devices.

--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -5,7 +5,7 @@
 .menu {
   background: var(--bg-secondary);
 
-  height: 100vh;
+  height: 100dvh;
   width: 100vw;
 
   position: absolute;
